src/test/ui/error-codes/E0161.migrate.stderr
error[E0161]: cannot move a value of type dyn Bar: the size of dyn Bar cannot be statically determined
  --> $DIR/E0161.rs:32:5
   |
LL |     x.f();
   |     ^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0161`.
